# activity-api

./: manage.py  pyproject.toml  pytests.ini
activity_api/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_birthday.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py
helpers/: functions.py
tasks/: models.py  serialazers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_categories.py  0003_task_isimportant.py  0004_alter_task_categories.py
tests/: simple_test.py
tests/tasks/: task_list_test.py
